# contact_graspnet_ros

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
contact_graspnet_examples/: .gitignore  README.md  package.xml  setup.cfg  setup.py
contact_graspnet_examples/config/: contact_graspnet_params.yaml  cosypose_params.yaml
contact_graspnet_examples/contact_graspnet_examples/: grasp_client_example.py
contact_graspnet_examples/launch/: contact_graspnet.launch.py
contact_graspnet_msgs/: CMakeLists.txt  package.xml
contact_graspnet_msgs/msg/: Grasps.msg  SceneGrasps.msg
contact_graspnet_msgs/srv/: GetSceneGrasps.srv
contact_graspnet_ros/: contact_graspnet_node.py  deps.repos  environment.yaml  package.xml  setup.py
contact_graspnet_ros/contact_graspnet_ros/: .gitignore  contact_graspnet_node.py  contact_graspnet_ros_parameters.py  contact_graspnet_ros_parameters.yaml
contact_graspnet_ros/launch/: contact_graspnet.launch.py
launch/: contact_graspnet.launch.py
