<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>contact_graspnet_examples</name>
  <version>0.2.0</version>
  <description>ROS 2 example node for contact_graspnet_ros</description>
  <author email="mederic.fourmy@gmail.com">Mederic Fourmy</author>
  <maintainer email="mederic.fourmy@gmail.com">Mederic Fourmy</maintainer>
  <license>BSD</license>


  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>contact_graspnet_ros</depend>
  <depend>contact_graspnet_msgs</depend>

  <test_depend>python3-pytest</test_depend>
  <test_depend>python3-mock</test_depend>
  <test_depend>launch</test_depend>
  <test_depend>launch_ros</test_depend>
  <test_depend>launch_testing</test_depend>
  <test_depend>launch_testing_ros</test_depend>
  <test_depend>ros_testing</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
