<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>contact_graspnet_ros</name>
  <version>0.2.0</version>
  <description>ROS 2 wrapper around contact_graspnet python library for 6D grasp estimation</description>
  <author email="mederic.fourmy@gmail.com">Mederic Fourmy</author>
  <maintainer email="mederic.fourmy@gmail.com">TBD</maintainer>
  <license>BSD</license>

  <depend>cv_bridge</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>contact_graspnet_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
